# HumbleRayTracer

./: CMakeLists.txt  LICENSE  README.md
src/: main.c  math.c  math.h  rendering.c  rendering.h  scene.h
